<resources>
    <string name="app_name">My Playground</string>
    <string name="txtPassword"></string>
    <string name="buttonLogin">Login</string>
    <string name="buttonCreateUser">Create User</string>
    <string name="labelPassword">Password:</string>
    <string name="lblUsername">Username:</string>
    <string name="txtUsername" />
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
