<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="224dp"
        android:layout_height="179dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/demo_icon" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:text="@string/buttonLogin"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="5dp" />

    <Button
        android:id="@+id/buttonCreateUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:text="@string/buttonCreateUser"
        android:textColor="#3F51B5"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        tools:layout_editor_absoluteX="5dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="419dp"
        android:layout_height="550dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/buttonLogin"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/lblUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_marginLeft="5dip"
            android:layout_marginTop="50dip"
            android:layout_marginRight="5dip"
            android:layout_marginBottom="10dip"
            android:autofillHints=""
            android:clickable="false"
            android:editable="false"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:text="@string/lblUsername" />

        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_marginLeft="5dip"
            android:layout_marginTop="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginBottom="5dip"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/lblPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:text="@string/labelPassword" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_marginLeft="5dip"
            android:layout_marginTop="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginBottom="5dip"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/txtPassword" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>